[gd_scene load_steps=9 format=3 uid="uid://bv73qmp1a1knv"]

[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_8ylug"]
[ext_resource type="Texture2D" uid="uid://bft76gr0eyrty" path="res://Sprites/ProgressBars/ProgressBarUnder.svg" id="3_u5tfr"]
[ext_resource type="Texture2D" uid="uid://mewa2a2wqcll" path="res://Sprites/ProgressBars/ProgressBarOver.svg" id="4_bre15"]
[ext_resource type="Texture2D" uid="uid://bv8gren0bgjd3" path="res://Sprites/Shadow.svg" id="4_wb4dn"]
[ext_resource type="Texture2D" uid="uid://yqasrhkywe3f" path="res://Sprites/ProgressBars/RedBarProgress.svg" id="5_572av"]
[ext_resource type="Texture2D" uid="uid://wdvhqpjceul4" path="res://Sprites/HUD/Soul.svg" id="6_8anto"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rqgqo"]
blend_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sgp88"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -50.0
linear_accel_max = 50.0
radial_accel_min = -30.0
radial_accel_max = 30.0
scale_min = 0.5
scale_max = 0.5
attractor_interaction_enabled = false

[node name="Enemy" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_8ylug")

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(0, -80)

[node name="BodyBone" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="BodySprite" type="Sprite2D" parent="Skeleton2D/BodyBone"]
z_index = 1

[node name="BodyArea" type="Area2D" parent="Skeleton2D/BodyBone" groups=["mob_areas"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/BodyBone/BodyArea"]
z_index = 1

[node name="HeadBone" type="Bone2D" parent="Skeleton2D/BodyBone"]
rest = Transform2D(1, 0, 0, 1, -53, -177)

[node name="HeadSprite" type="Sprite2D" parent="Skeleton2D/BodyBone/HeadBone"]

[node name="HeadArea" type="Area2D" parent="Skeleton2D/BodyBone/HeadBone" groups=["mob_areas"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/BodyBone/HeadBone/HeadArea"]
z_index = 1
rotation = 0.837758

[node name="LegsArea" type="Area2D" parent="Skeleton2D" groups=["mob_areas"]]
z_index = 1
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/LegsArea"]
position = Vector2(12, 83)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -83)
texture = ExtResource("4_wb4dn")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 32.0
offset_top = 13.0
offset_right = 182.0
offset_bottom = 53.0
scale = Vector2(0.7, 0.7)
value = 5.0
rounded = true
texture_under = ExtResource("3_u5tfr")
texture_over = ExtResource("4_bre15")
texture_progress = ExtResource("5_572av")

[node name="SoulParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rqgqo")
scale = Vector2(0.5, 0.5)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_sgp88")
texture = ExtResource("6_8anto")
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.55

[node name="RedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Skeleton2D/BodyBone/BodyArea" to="." method="_on_body_area_body_entered"]
[connection signal="body_entered" from="Skeleton2D/BodyBone/HeadBone/HeadArea" to="." method="_on_head_area_body_entered"]
[connection signal="body_entered" from="Skeleton2D/LegsArea" to="." method="_on_legs_area_body_entered"]
[connection signal="timeout" from="RedTimer" to="." method="_on_red_timer_timeout"]
